# bench-cleanser

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  config.yaml  pyproject.toml  requirements.txt  run_deep_dive.py  run_pipeline.py  run_trajectory_analysis.py
.github/workflows/: ci.yml
bench_cleanser/: __init__.py  _console.py  cache.py  cli.py  code_visitor.py  data_loader.py  deep_dive.py  fusion.py  llm_client.py  models.py  pipeline.py  presentation.py  repo_manager.py  schemas.py  static_analysis.py
bench_cleanser/_internal/: SOURCE.md  __init__.py  cloudgpt.py
bench_cleanser/analysis/: cross_ref.py  patch_analyzer.py  scope_analyzer.py  structural_diff.py  test_analyzer.py
bench_cleanser/classification/: dual_taxonomy.py  scorer.py  taxonomy.py
bench_cleanser/parsing/: patch_parser.py  test_parser.py
bench_cleanser/prompts/: __init__.py  intent_extraction.md  patch_classifier.md  task_classifier.md  test_classifier.md  trajectory_analysis.md
bench_cleanser/trajectory/: analyzer.py  classifier.py  loader.py  models.py
docs/: CONTRIBUTING.md  FUSION.md  TAXONOMY.md  overview.html
examples/sample_run/: README.md  summary_stats.json
examples/sample_run/reports/: instance_ansible__ansible-0ea40e09d1b35bcb69ff4d9cecf3d0defa4b36e8-v30a923fb5c164d6cd18280c02422f75e611e8fb2.json  instance_ansible__ansible-0fd88717c953b92ed8a50495d55e630eb5d59166-vba6da65a0f3baefda7a058ebbd0a8dcafb8512f5.json  instance_ansible__ansible-106909db8b730480615f4a33de0eb5b710944e78-v0f01c69f1e2528b935359cfe578530722bca2c59.json
scripts/: build_pptx.py
tests/: conftest.py  test_console.py  test_dual_taxonomy_heuristics.py  test_fusion.py  test_fusion_rule4.py  test_llm_client.py  test_patch_parser.py  test_robustness_pass.py  test_scorer.py  test_trajectory_classifier.py
tools/: README.md  audit.py  monitor_pipeline.py
